# remill

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  ACKNOWLEDGEMENTS.md  CLAUDE.md  CMakeLists.txt  CMakeLists_old.txt  CMakeLists_vcpkg.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  CPPLINT.cfg  Dockerfile  Dockerfile.llvm  Dockerfile.vcpkg  Doxyfile  LICENSE  README.md  bootstrap.sh  build.sh  deps.txt  download_dependencies.sh  flake.nix  vcpkg.README.md  vcpkg.json
cmake/gflags/: CMakeLists.txt  GflagsDownloader.cmake
cmake/glog/: CMakeLists.txt  GlogDownloader.cmake
cmake/googletest/: CMakeLists.txt  GtestDownloader.cmake
dependencies/: CMakeLists.txt  README.md  XEDConfig.cmake.in  llvm.cmake  superbuild.cmake  xed.cmake
lib/Arch/: Arch.cpp  Arch.h  ArchGroup.cpp  BitManipulation.h  CMakeLists.txt  Context.cpp  Instruction.cpp  Name.cpp
lib/Arch/AArch32/: Arch.cpp  Arch.h  ArchContext.cpp  Base.cpp  CMakeLists.txt  Decode.cpp  Decode.h  DecodeThumb2.cpp
lib/Arch/AArch64/: Arch.cpp  CMakeLists.txt  Decode.cpp  Decode.h  Extract.cpp
lib/Arch/MSP430/: Arch.cpp  CMakeLists.txt
lib/Arch/RISCV/: CMakeLists.txt
lib/Arch/Runtime/: HyperCall.cpp  Intrinsics.cpp
lib/Arch/SPARC32/: Arch.cpp  CMakeLists.txt  Decode.h  Extract.cpp
lib/Arch/SPARC64/: Arch.cpp  CMakeLists.txt  Decode.h  Extract.cpp
lib/Arch/Sleigh/: AArch32Arch.cpp  AArch32Arch.h  AArch64Arch.cpp  AArch64Arch.h  AArch64Base.cpp  ARMBase.cpp  Arch.cpp  Arch.h  CMakeLists.txt  ControlFlowStructuring.cpp  ControlFlowStructuring.h  MIPS.h  MIPSArch.cpp  PPC.h  PPCArch.cpp  RISCVArch.cpp  SPARC32Arch.cpp  SPARC32Arch.h  SPARC32Base.cpp  Thumb.h  Thumb2Arch.cpp  X86Arch.cpp
lib/Arch/SleighArchs/: CMakeLists.txt  SleighArch.cpp  SleighArch.h  Thumb2Arch.cpp  X86Arch.cpp
lib/Arch/SleighThumb2/: Arch.cpp  CMakeLists.txt
lib/Arch/SleighX86/: Arch.cpp  CMakeLists.txt
lib/Arch/Thumb2/: Decode.cpp
lib/Arch/X86/: Arch.cpp  Base.cpp  CMakeLists.txt  XED.h
lib/BC/: ABI.cpp  Annotate.cpp  CMakeLists.txt  DeadStoreEliminator.cpp  InstructionLifter.cpp  InstructionLifter.h  IntrinsicTable.cpp  Optimizer.cpp  PcodeCFG.cpp  SleighLifter.cpp  TraceLifter.cpp  Util.cpp
lib/OS/: CMakeLists.txt  FileSystem.cpp  OS.cpp
lib/Version/: CMakeLists.txt  Version.cpp.in
scripts/diff_tester_export_insns/: pyproject.toml
scripts/diff_tester_export_insns/diff_tester_export_insns/: ci_runner.py  run.py
scripts/diff_tester_export_insns/tests/: test_diff_tester_export_insns.py
scripts/replace_pc_relative_disactions/: README.md  pyproject.toml
scripts/replace_pc_relative_disactions/register_definitions/: ARM.ia  ARMThumb.ia  README.md  powerpc.ia  x86.ia
scripts/replace_pc_relative_disactions/replace_pc_relative_disactions/: main.py
scripts/replace_pc_relative_disactions/tests/: test_replace_pc_relative_disactions.py
test_runner_lib/: CMakeLists.txt  TestRunner.cpp
test_runner_lib/include/test_runner/: TestOutputSpec.h  TestRunner.h
tests/AArch64/: .gdbinit  CMakeLists.txt  Lift.cpp  PrintRestoreState.cpp  PrintSaveState.cpp  Run.cpp  Test.S  Test.h  Tests.S
tests/AArch64/BINARY/: ADD.S  ADDS_n_ADDSUB_EXT.S  ADDS_n_ADDSUB_IMM.S  ADDS_n_ADDSUB_SHIFT.S  ADD_32_ADDSUB_EXT.S  ADD_64_ADDSUB_EXT.S  ADD_n_ADDSUB_IMM.S  ADD_n_ADDSUB_SHIFT.S  ANDS_nS_LOG_IMM.S  ANDS_n_LOG_IMM.S  AND_n_LOG_IMM.S  AND_n_LOG_SHIFT.S  BIC_n_LOG_SHIFT.S  CMN_ADDS_n_ADDSUB_EXT.S  CMN_ADDS_n_ADDSUB_IMM.S  CMN_ADDS_n_ADDSUB_SHIFT.S  CMP_SUBS_n_ADDSUB_EXT.S  CMP_SUBS_n_ADDSUB_IMM.S  CMP_SUBS_n_ADDSUB_SHIFT.S  EOR_n_LOG_IMM.S  FABS_t_FLOATDP1.S  FADD_t_FLOATDP2.S  FCMPE_n_FLOATCMP.S  FCMPx_n_FLOATCMP.S  FDIV_t_FLOATDP2.S  FMADD_t_FLOATDP3.S  FMUL_t_FLOATDP2.S  FNEG_t_FLOATDP1.S  FSUB_t_FLOATDP2.S  MADD_nA_DP_3SRC.S  MSUB_nA_DP_3SRC.S  ORR_n_LOG_IMM.S  ORR_n_LOG_SHIFT.S  SBCS_n_ADDSUB_CARRY.S  SBC_n_ADDSUB_CARRY.S  SDIV_n_DP_2SRC.S  SMADDL_64WA_DP_3SRC.S  SMULH_64_DP_3SRC.S  SUB.S  SUBS_n_ADDSUB_EXT.S  (+10 more)
tests/AArch64/BITBYTE/: BFM_nM_BITFIELD.S  CLZ_n_DP_1SRC.S  EXTR_n_EXTRACT.S  RBIT.S  REV.S  SBFM_nM_BITFIELD.S  UBFM_nM_BITFIELD.S
tests/AArch64/BRANCH/: B_ONLY_CONDBRANCH.S  CBNZ_n_COMPBRANCH.S  CBZ_n_COMPBRANCH.S  TBNZ_ONLY_TESTBRANCH.S  TBZ_ONLY_TESTBRANCH.S
tests/AArch64/COND/: CCMN_n_CONDCMP_IMM.S  CCMP_n_CONDCMP_IMM.S  CSEL_n_CONDSEL.S  x_CSINC_n_CONDSEL.S  x_CSINV_n_CONDSEL.S  x_CSNEG_n_CONDSEL.S
tests/AArch64/CONVERT/: FCVTZU_nS_FLOAT2INT.S  FCVTZx_nS_FLOAT2INT.S  FCVT_t_FLOAT2INT.S  SCVTF_n_FLOAT2INT.S  UCVTF_Dn_FLOAT2INT.S  UCVTF_Sn_FLOAT2INT.S  UCVTF_n_FLOAT2INT.S
tests/AArch64/DATAXFER/: FMOV_NToN.S  FMOV_t_FLOATIMM.S  INS_ASIMDINS_IR_R.S  LD1_ASISDLSEP_I1_I1.S  LD1_ASISDLSEP_I2_I2.S  LD1_ASISDLSEP_I3_I3.S  LD1_ASISDLSEP_I4_I4.S  LD1_ASISDLSE_R1_1V.S  LD1_ASISDLSE_R2_2V.S  LD1_ASISDLSE_R3_3V.S  LD1_ASISDLSE_R4_4V.S  LD2_ASISDLSEP_I2_I.S  LD2_ASISDLSEP_R2_R.S  LD2_ASISDLSE_I2_I.S  LD2_ASISDLSE_R2.S  LD2_ASISDLSE_R2_8B.S  LD2_ASISDLSE_R2_R.S  LD3_ASISDLSE_R3.S  LD4_ASISDLSE_R4.S  LDPSW_64_LDSTPAIR.S  LDRB.S  LDRH.S  (+36 more)
tests/RISCV/: CMakeLists.txt  Main.cpp  RISCVTestSpec.h  RV32A.cpp  RV32C.cpp  RV32D.cpp  RV32F.cpp  RV32I.cpp  RV32I_Control.cpp  RV32I_Memory.cpp  RV32I_Shift.cpp  RV32I_UType.cpp  RV32M.cpp  RV32Zicsr.cpp  RV64A.cpp  RV64C.cpp  RV64D.cpp  RV64F.cpp  RV64I.cpp  RV64I_Control.cpp  RV64I_Memory.cpp  RV64I_UType.cpp  RV64I_WOps.cpp  RV64M.cpp  RV64Zicsr.cpp  TestHarness.h  TestLifting32.cpp  TestLifting64.cpp  TestUtil.h  test_riscv_lift_and_run.sh
tests/Thumb/: CMakeLists.txt  Runtime.cpp  TestLifting.cpp
tests/X86/: .gdbinit  ABI.S  CMakeLists.txt  Generate.cpp  Lift.cpp  PrintSaveState.cpp  Run.cpp  SaveState.S  State.h  Test.h  Tests.S
tools/: CMakeLists.txt  setup.py
tools/CGC/: Process.cpp  Process.h  Runtime.cpp  Snapshot.cpp  Snapshot.h
tools/disass/: __main__.py  cfg.py  log.py  program.py
tools/lift/: CMakeLists.txt  Lift.cpp  README.md
tools/remill_disass/: __main__.py  cfg.py  program.py
tools/remill_lift/: CMakeLists.txt  Lift.cpp
tools/remill_opt/: CMakeLists.txt  Optimize.cpp
tools/vmill/: CMakeLists.txt  Execute.cpp  Execute32.cpp  Snapshot.cpp
(+1005 files in other folders)
